// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Modal BackgroundScroll 1`] = `
.c5 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
  color: var(--charcoal-text1);
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color,0.2s box-shadow;
  transition: 0.2s color,0.2s box-shadow;
}

.c7::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c7::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7:not(:disabled):not([aria-disabled]):hover,
.c7[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active,
.c7:not(:disabled):not([aria-disabled]):focus,
.c7[aria-disabled='false']:focus,
.c7:not(:disabled):not([aria-disabled]):focus-visible,
.c7[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > .c6 {
  margin-left: auto;
}

.c10 {
  display: inline-block;
  width: 100%;
}

.c10:disabled,
.c10[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c11 {
  width: 100%;
  margin-bottom: 8px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c12:disabled,
.c12[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c12:not(:disabled):not([aria-disabled]):focus,
.c12[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c12[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c12:not(:disabled):not([aria-disabled]):focus-visible,
.c12[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:not(:disabled):not([aria-disabled]):hover,
.c12[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c12:not(:disabled):not([aria-disabled]):active,
.c12[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c13 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14 {
  color: var(--charcoal-text2);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c15[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:disabled,
.c15[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-bottom: 8px;
}

.c8 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c8:not(:disabled):not([aria-disabled]):hover,
.c8 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c8:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c9 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c9::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c9:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::placeholder {
  color: var(--charcoal-text3);
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <div
      style={
        Object {
          "height": 1024,
        }
      }
    >
      <button
        className="charcoal-button"
        onClick={[Function]}
      >
        Open Modal
      </button>
    </div>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c10"
              >
                <div
                  className="c3 c11"
                >
                  <label
                    className="c5"
                  >
                    Fruits
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c12"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c13"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c14"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c15 charcoal-modal-close-button"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal BottomSheet 1`] = `
.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c2:not(:disabled):not([aria-disabled]):active,
.c2[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c2:not(:disabled):not([aria-disabled]):focus,
.c2[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c2[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c2:not(:disabled):not([aria-disabled]):focus-visible,
.c2[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={true}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={true}
        onKeyDown={[Function]}
        role="dialog"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={true}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Danger"
              onClick={[Function]}
            >
              削除する
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c2 charcoal-modal-close-button"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal Default 1`] = `
.c5 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
  color: var(--charcoal-text1);
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color,0.2s box-shadow;
  transition: 0.2s color,0.2s box-shadow;
}

.c7::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c7::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7:not(:disabled):not([aria-disabled]):hover,
.c7[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active,
.c7:not(:disabled):not([aria-disabled]):focus,
.c7[aria-disabled='false']:focus,
.c7:not(:disabled):not([aria-disabled]):focus-visible,
.c7[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > .c6 {
  margin-left: auto;
}

.c10 {
  display: inline-block;
  width: 100%;
}

.c10:disabled,
.c10[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c11 {
  width: 100%;
  margin-bottom: 8px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c12:disabled,
.c12[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c12:not(:disabled):not([aria-disabled]):focus,
.c12[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c12[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c12:not(:disabled):not([aria-disabled]):focus-visible,
.c12[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:not(:disabled):not([aria-disabled]):hover,
.c12[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c12:not(:disabled):not([aria-disabled]):active,
.c12[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c13 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14 {
  color: var(--charcoal-text2);
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c15[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:disabled,
.c15[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-bottom: 8px;
}

.c8 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c8:not(:disabled):not([aria-disabled]):hover,
.c8 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c8:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c9 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c9::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c9:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::placeholder {
  color: var(--charcoal-text3);
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c10"
              >
                <div
                  className="c3 c11"
                >
                  <label
                    className="c5"
                  >
                    Fruits
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c12"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c13"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c14"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c15 charcoal-modal-close-button"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal FullBottomSheet 1`] = `
.c5 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
  color: var(--charcoal-text1);
}

.c5::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c5::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color,0.2s box-shadow;
  transition: 0.2s color,0.2s box-shadow;
}

.c7::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c7::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7:not(:disabled):not([aria-disabled]):hover,
.c7[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c7:not(:disabled):not([aria-disabled]):active,
.c7[aria-disabled='false']:active,
.c7:not(:disabled):not([aria-disabled]):focus,
.c7[aria-disabled='false']:focus,
.c7:not(:disabled):not([aria-disabled]):focus-visible,
.c7[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > .c6 {
  margin-left: auto;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c10:not(:disabled):not([aria-disabled]):hover,
.c10[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c10:not(:disabled):not([aria-disabled]):active,
.c10[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c10:not(:disabled):not([aria-disabled]):focus,
.c10[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c10:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c10[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c10:not(:disabled):not([aria-disabled]):focus-visible,
.c10[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c10:disabled,
.c10[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-bottom: 8px;
}

.c8 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c8:not(:disabled):not([aria-disabled]):hover,
.c8 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c8:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c9 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c9::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c9:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c9::placeholder {
  color: var(--charcoal-text3);
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet="full"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet="full"
        onKeyDown={[Function]}
        role="dialog"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet="full"
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="c3 c4"
                >
                  <label
                    className="c5"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="c6 c7"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c8"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c9"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c10 charcoal-modal-close-button"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal InternalScroll 1`] = `
.c0 {
  overflow: auto;
  max-height: calc( 100vh - 184px - 56px );
}

.c1 {
  position: relative;
}

.c1::before {
  content: '';
  pointer-events: none;
  border-top: 1px solid rgba(0,0,0,0.08);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              style={
                Object {
                  "background": "linear-gradient(#e66465, #9198e5)",
                  "height": 1000,
                }
              }
            />
          </div>
          <div
            className="charcoal-modal-buttons c1"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal NotDismmissableStory 1`] = `
.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
